--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "package-linux-ia32": "electron-packager . shitterClient --overwrite --asar=true --platform=linux --arch=ia32 --icon=assets/icon/icon.png --prune=true --out=release-builds"
   },
   "devDependencies": {
-    "electron": "10",
+    "electron": "9.4.4",
     "electron-packager": "^15.2.0"
+  },
+  "dependencies": {
+    "v8-compile-cache": "^2.3.0"
   }
 }
