--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
   "name": "shitterClient",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "description": "💀 shitterClient 💀 by m2rk",
   "main": "src/main.js",
-  "license": "GPL-3.0-or-later",
   "scripts": {
     "start": "electron .",
-    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icon/icon.icns --prune=true --out=release-builds --asar=true",
-    "package-win": "electron-packager . shitterClient --overwrite --asar=true --platform=win32 --arch=x64 --icon=assets/icon/icon.ico --prune=true --out=release-builds --version-string.CompanyName=\"shitterClient Devs\" --version-string.FileDescription=1.0.0 --version-string.ProductName=\"shitterClient Client\"",
-    "package-win-ia32": "electron-packager . shitterClient --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icon/icon.ico --prune=true --out=release-builds --version-string.CompanyName=\"shitterClient Devs\" --version-string.FileDescription=1.0.0 --version-string.ProductName=\"shitterClient Client\"",
-    "package-linux": "electron-packager . shitterClient --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icon/icon.png --prune=true --out=release-builds",
-    "package-linux-ia32": "electron-packager . shitterClient --overwrite --asar=true --platform=linux --arch=ia32 --icon=assets/icon/icon.png --prune=true --out=release-builds"
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder",
+    "release": "electron-builder --publish always",
+    "postinstall": "electron-builder install-app-deps"
+  },
+  "author": "m2rk1312",
+  "license": "GPL-3.0-or-later",
+  "keywords": [
+    "krunker.io, krunker, krunker client, shitterClient"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/m2rk1312/EVClient.git"
   },
   "devDependencies": {
     "electron": "9.4.4",
-    "electron-packager": "^15.2.0"
+    "electron-builder": "22.11.7"
   },
   "dependencies": {
     "v8-compile-cache": "^2.3.0"
