--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "https://github.com/m2rk1312/EVClient.git"
   },
   "devDependencies": {
-    "electron": "10.4.7",
+    "electron": "^10.4.7",
     "electron-builder": "22.11.7"
   },
   "dependencies": {
