--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shitterClient",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "💀 shitterClient 💀 by m2rk",
   "main": "src/main.js",
   "scripts": {
@@ -20,11 +20,11 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/m2rk1312/EVClient.git"
+    "url": "https://github.com/m2rk1312/shitterClient.git"
   },
   "devDependencies": {
     "electron": "^10.4.7",
-    "electron-builder": "22.11.7"
+    "electron-builder": "^23.6.0"
   },
   "dependencies": {
     "v8-compile-cache": "^2.3.0"
